# SALM_GroundTruth_Extractor

./: .gitignore  README.md
src/: CMakeLists.txt
src/groundtruth_tum_extractor/: CMakeLists.txt  README.md  package.xml
src/groundtruth_tum_extractor/config/: mcd_navsat_fix.yaml  viral_pose_stamped.yaml
src/groundtruth_tum_extractor/include/groundtruth_tum_extractor/: tum_export_utils.hpp
src/groundtruth_tum_extractor/launch/: navsat_fix_to_tum.launch  pose_stamped_to_tum.launch
src/groundtruth_tum_extractor/src/: navsat_fix_to_tum.cpp  pose_stamped_to_tum.cpp
test/: rtk_gps_truth_converter.cpp
