<?xml version="1.0"?>
<package format="2">
  <name>groundtruth_tum_extractor</name>
  <version>0.1.0</version>
  <description>Offline rosbag extractors that convert NavSatFix and PoseStamped topics into TUM trajectory text files.</description>

  <maintainer email="sax@example.com">sax</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geographiclib</depend>

  <export/>
</package>
